# Symptogen

./: .gitignore  CMakeLists.txt  CodingConventions.hpp  LICENSE  README.md
assets/: data.xml
assets/animation/: ColdSneezing.xml  DestructibleObjectByFlames.xml  DestructibleObjectByShivering.xml  Die.xml  Fever.xml  FeverSneezing.xml  Flames.xml  Flower.xml  Flower2.xml  KinematicBegin.xml  KinematicEnd.xml  Shivering.xml  Sneeze.xml  WalkRight.xml  WalkRightHypothermia.xml  WalkRightShivering.xml  dino_animation.xml  rabbit_animation.xml
assets/animation/Shivering/: Shivering.xml
assets/collision/: basicFloor_1x2.xml  basicFloor_2x2.xml  basicFloor_2x4.xml  basicFloor_4x2.xml  box.xml  boxDestructible.xml  dinoCollision.xml  floor1x2Collision.xml  floor2x2Collision.xml  movable_object.xml  rabbit_collision.xml  spikes_2x2.xml
assets/fonts/: Army_05.psd  Army_05.tga  arial.fnt  arial_0.tga  arial_1.tga  arial_bold.fnt  arial_bold_0.tga  arial_bold_1.tga  arial_italic.fnt  arial_italic_0.tga  arial_italic_1.tga
assets/map/: bloom_level1.xml  bloom_lvl2.xml  bloom_lvl3.xml  coldtrap_lvl4.xml  coldtrap_lvl5.xml  coldtrap_lvl6.xml  level1.xml  level1Better.xml  level2.xml  level3.xml  level4.xml  level5.xml  level6.xml  level7.xml  level8.xml  level9.xml  leveltest.xml  map1.txt  map1.xml  oldlevel1.xml  trauma_lvl7.xml  trauma_lvl8.xml  traume_lvl9.xml
data/: jauge-cdcf.xcf  remarque 2  remarque_dessin 1
doc/: Doxyfile
doc/html/: _button_8cpp.html  _button_8cpp__incl.dot  _button_8cpp__incl.md5  _button_8cpp_source.html  _button_8h.html  _button_8h__dep__incl.dot  _button_8h__dep__incl.md5  _button_8h__incl.dot  _button_8h__incl.md5  _button_8h_source.html  _camera_8cpp.html  _camera_8cpp__incl.dot  _camera_8cpp__incl.md5  _camera_8cpp_source.html  _camera_8h.html  _camera_8h__dep__incl.dot  _camera_8h__dep__incl.md5  _camera_8h__incl.dot  _camera_8h__incl.md5  _camera_8h_source.html  _choose_your_level_menu_8cpp.html  _choose_your_level_menu_8cpp__incl.dot  _choose_your_level_menu_8cpp__incl.md5  _choose_your_level_menu_8cpp_source.html  _choose_your_level_menu_8h.html  _choose_your_level_menu_8h__dep__incl.dot  _choose_your_level_menu_8h__dep__incl.md5  _choose_your_level_menu_8h__incl.dot  _choose_your_level_menu_8h__incl.md5  _choose_your_level_menu_8h_source.html  _contact_listener_8cpp.html  _contact_listener_8cpp__incl.dot  _contact_listener_8cpp__incl.md5  _contact_listener_8cpp_source.html  _contact_listener_8h.html  _contact_listener_8h__dep__incl.dot  _contact_listener_8h__dep__incl.md5  _contact_listener_8h__incl.dot  _contact_listener_8h__incl.md5  _contact_listener_8h_source.html  (+674 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_77.js  all_7e.js  classes_62.js  classes_63.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_77.js  defines_5f.js  enums_61.js  enums_64.js  enums_66.js  (+64 more)
doc/latex/: _button_8cpp.tex  _button_8cpp__incl.dot  _button_8cpp__incl.md5  _button_8h.tex  _button_8h__dep__incl.dot  _button_8h__dep__incl.md5  _button_8h__incl.dot  _button_8h__incl.md5  _camera_8cpp.tex  _camera_8cpp__incl.dot  _camera_8cpp__incl.md5  _camera_8h.tex  _camera_8h__dep__incl.dot  _camera_8h__dep__incl.md5  _camera_8h__incl.dot  _camera_8h__incl.md5  _choose_your_level_menu_8cpp.tex  _choose_your_level_menu_8cpp__incl.dot  _choose_your_level_menu_8cpp__incl.md5  _choose_your_level_menu_8h.tex  _choose_your_level_menu_8h__dep__incl.dot  _choose_your_level_menu_8h__dep__incl.md5  _choose_your_level_menu_8h__incl.dot  _choose_your_level_menu_8h__incl.md5  _contact_listener_8cpp.tex  _contact_listener_8cpp__incl.dot  _contact_listener_8cpp__incl.md5  _contact_listener_8h.tex  _contact_listener_8h__dep__incl.dot  _contact_listener_8h__dep__incl.md5  _contact_listener_8h__incl.dot  _contact_listener_8h__incl.md5  _entity_manager_8cpp.tex  _entity_manager_8cpp__incl.dot  _entity_manager_8cpp__incl.md5  _entity_manager_8h.tex  _entity_manager_8h__dep__incl.dot  _entity_manager_8h__dep__incl.md5  _entity_manager_8h__incl.dot  _entity_manager_8h__incl.md5  (+392 more)
libs/SpriterParser/: CMakeLists.txt
libs/glew-1.9.0/: CMakeLists.txt
libs/include/: CMakeLists.txt  IND_SpriterManager.h  IndiePlatforms.h
src/: CIndieLib.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Parser.cpp  Parser.h  PhysicalEntity.cpp  PhysicalEntity.h  PhysicalManager.cpp  PhysicalManager.h  Render.cpp  Render.h  RenderEntity.cpp  RenderEntity.h  Singleton.h  SoundManager.cpp  SoundManager.h  TinyXMLTools.h  Window.cpp  Window.h  main.cpp  main_rabbits.cpp  test.cpp  tinyxml2.cpp
src/input/: InputManager.cpp  InputManager.h
src/menu/: Button.cpp  Button.h  ChooseYourLevelMenu.cpp  ChooseYourLevelMenu.h  GuiComponent.cpp  GuiComponent.h  Image.cpp  Image.h  Layout.cpp  Layout.h  LineEdit.cpp  LineEdit.h  ManageGamesMenu.cpp  ManageGamesMenu.h  MenuManager.cpp  MenuManager.h  NewGameMenu.cpp  NewGameMenu.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h  ScrollArea.cpp  ScrollArea.h  Slider.cpp  Slider.h  State.h  Text.cpp  Text.h  WelcomeLastPlayerMenu.cpp  WelcomeLastPlayerMenu.h  WelcomeUnknownMenu.cpp  WelcomeUnknownMenu.h
src/persistence/: Parser.cpp  Parser.h  ParserCollision.cpp  ParserCollision.h
src/physic/: ContactListener.cpp  ContactListener.h  PhysicalEntity.cpp  PhysicalEntity.h  PhysicalManager.cpp  PhysicalManager.h  PhysicalWorld.cpp  PhysicalWorld.h
src/power/: Fever.cpp  Fever.h  Headache.cpp  Headache.h  Power.cpp  Power.h  Sneeze.cpp  Sneeze.h
src/render/: Camera.cpp  Camera.h  Render.cpp  Render.h  RenderEntity.cpp  RenderEntity.h  Window.cpp
src/sound/: SoundEntity.cpp  SoundEntity.h  SoundManager.cpp  SoundManager.h
(+46 files in other folders)
